--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,11 +1,57 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<h1>Books</h1>
 
-<h1>投稿一覧</h1>
-
-<%= @book.each do |book| %>
-
-  <p>タイトル</p>
-  <span><%= book.title %></span>
-  
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
 <% end %>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
+        <td>
+        <%= link_to 'Show', book_path(book.id) %>
+        </td>
+
+        <td>
+        <%= link_to 'Edit', edit_book_path(book.id) %>
+        </td>
+
+        <td>
+        <%= link_to "Destroy", destroy_book_path(book.id), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+  <%= form_with model: @book do |f| %>
+    <h2>New book</h2>
+    <div>
+    <label>Title</label><br>
+    <%= f.text_field :title %>
+    </div>
+    <div>
+    <label>Body</label><br>
+    <%= f.text_area :body %>
+    </div>
+    <div>
+    <%= f.submit 'Create Book' %>
+    </div>
+  <% end %>
+
+
+
