--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,7 +27,7 @@
         </td>
 
         <td>
-        <%= link_to 'Edit', edit_book_path(book.id) %>
+        <%= link_to 'Edit', edit_book_path(book) %>
         </td>
 
         <td>
