--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -21,5 +21,8 @@
   <%= f.text_area :body %>
   <br>
   <%= f.submit 'Update Book' %>
-  
+
 <% end %>
+
+  <%= link_to 'Show', book_path(@book.id) %><%= " | " %>
+  <%= link_to 'Back', books_path %>
